# unified-agentic-memory

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMPLETED_TASKS.md  IMPLEMENTATION.md  Implementation Review.md  PENDING_TASKS.md  PROJECT_PLAN.md  README.md  Unified Agentic Memory — Implementation Plan.md  pyproject.toml
.github/: copilot-instructions.md
db_stack/: .env  .env.example  Dockerfile_pguam18.4  build.sh  create_extension.sql  create_pgcron.sh  create_pgcron.sql  docker-compose.yml  schema.sql
db_stack/migrations/: 0001_initial_schema.sql  0002_memory_type.sql  0003_age_graph.sql
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
hooks/claude-code/: settings.json
hooks/codex/: hooks.json
hooks/copilot/: hooks.json
hooks/warp/uam-memory/: SKILL.md
src/uam/: __init__.py  api.py  cli.py  compat.py  config.py  db.py  dream.py  embeddings.py  event_processor.py  event_queue.py  events.py  graph.py  llm.py  mcp_server.py  memories.py  models.py  profiles.py  projection.py  response_cache.py  search.py  uuids.py  vectors.py
src/uam/hooks/: __init__.py  handler.py  injector.py  metrics.py
src/unified_agentic_memory/: __init__.py
tests/: conftest.py  test_cli.py  test_dream.py  test_event_processor.py  test_event_queue.py  test_graph.py  test_graph_disabled.py  test_hooks.py  test_memories.py  test_profiles.py  test_providers.py  test_response_cache.py  test_search.py
