[project]
name = "unified-agentic-memory"
version = "0.1.0"
description = "Unified agentic memory across coding harnesses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "mcp>=1.12.0",
    "pgvector>=0.4.1",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "typer>=0.16.0",
    "uuid6>=2025.0.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
uam = "uam.cli:main"
uam-mcp = "uam.mcp_server:main"
unified-agentic-memory = "uam.cli:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
